HTML & CSS Part
Completed the structure with HTML and CSS for design/decoration.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 <div class="container"> 
 <h1 id="title"> Tip Calculator </h1>
 <div class="part1"> 
-<div id="bill_amount"> Bill amount:<input id="bill_amount"> </div>
-<div class="total_customers"> Number of people <input id="total_customers"> </div>
-
+<div id="total_customers"> Number of people: <input id="customer_input"> </div>
+<div id="bill_amount"> Bill amount: <input id="bill_input" placeholder="$"> </div>
 <p> Select Tip % </p>
 <div class="tip">
-<div class= "tips tip-5"> 5% </div>
-<div class= "tips tip-10"> 10% </div>
-<div class= "tips tip-15"> 15% </div>
-<div class= "tips tip-20"> 20% </div>
+<button class= "tips tip-5"> 5% </button>
+<button class= "tips tip-10"> 10% </button>
+<button class= "tips tip-15"> 15% </button>
+<button class= "tips tip-20"> 20% </button>
 <div class= "tips tip-custom"> <input class="tips-custom" placeholder="CUSTOM"> </div>
 </div>
 
