--- a/index.html
+++ b/index.html
@@ -9,38 +9,31 @@
 </head>
 
 <body>
-    
 <div class="container"> 
 <h1 id="title"> Tip Calculator </h1>
 <div class="part1"> 
-<div id="total_customers"> Number of people: <input id="customer_input"> </div>
-<div id="bill_amount"> Bill amount: <input id="bill_input" placeholder="$"> </div>
+<div id="customers_amount"> Number of people: <input type="number" id="total_customer"> </div>
+<div id="bill_amount"> Bill amount: <input type="number" id="total_bill"> </div>
 <p> Select Tip % </p>
 <div class="tip">
-<button class= "tips tip-5"> 5% </button>
-<button class= "tips tip-10"> 10% </button>
-<button class= "tips tip-15"> 15% </button>
-<button class= "tips tip-20"> 20% </button>
-<div class= "tips tip-custom"> <input class="tips-custom" placeholder="CUSTOM"> </div>
+<button id= "tip-5"> 5% </button>
+<button id= "tip-10"> 10% </button>
+<button id= "tip-15"> 15% </button>
+<button id= "tip-20"> 20% </button>
 </div>
-
 
 <div id="button">
-<button id="button"> Calculate </button>
+<button id="resetButton"> Reset </button>
 </div>
 
-
 </div>
-
 
 <div class="part2">
-    <div id="total"> Tip Amount: <p class="total_tip">$ </p></div>
-    <p id="per_person"> / person </p>
-    <div id="total"> Total Bill: <p class="total_bill">$ </p> </div>
+    <div id="display"> Total Bill:  <div id="display_bill">$ </div> </div>
+    <div id="per_person"> / person </div>
+    <div id="display"> Tip Amount: <p id="display_tip">$ </p></div>
     <p id="per_person"> / person </p>
 </div>
-
-
 
 </div>
 <script src="script.js"> </script>
